--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_KEY=http://localhost:3002
+REACT_APP_EMPTY_PROFILE_PIC="https://woodfibreinsulation.co.uk/wp-content/uploads/2017/04/blank-profile-picture-973460-1-1-1080x1080.png"
